--- a/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/crear_ambulancia.html
@@ -10,7 +10,7 @@
 
    <div class="row">
         <div class="col text-center m-3">
-                <h1>Crear Ambulancia</h1>
+                <h1>Crear Unidad</h1>
         </div>
     </div>
     <div class="container-fluid">
@@ -48,7 +48,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-body">
-                <p>Se ha creado la ambulancia {{ ambulancia_name }}</p>
+                <p>Se ha creado la unidad {{ ambulancia_name }}</p>
               </div>
               <div class="modal-footer">
                 <a href="/ambulancia/ver/" class="btn btn-success">Aceptar</a>
