--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -151,14 +151,14 @@
                             <li>
                                 <a href="{% url 'inventario:ver_inventario' %}">
                                     <i class="mdi mdi-database"></i>
-                                    <span> Inventarios </span>
+                                    <span> Equipo </span>
                                 </a>
                             </li>
 
                             <li>
                                 <a href="{% url 'ambulancia:ver_ambulancias' %}">
                                     <i class="mdi mdi-ambulance"></i>
-                                    <span> Ambulancias </span>
+                                    <span> Unidad </span>
                                 </a>
                             </li>
                             {% endif %}
