--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
-                        <a href="/ambulancia/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="/material/ver/" class="btn btn-danger">Salir sin guardar</a>
                     </div>
                 </div>
             </div>
