--- a/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/editar_ambulancia.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="col text-center m-3">
-            <h1>Editar ambulancia {{ ambulancia.nombre }}</h1>
+            <h1>Editar Unidad {{ ambulancia.nombre }}</h1>
         </div>
     </div>
     <div class="container-fluid">
@@ -38,7 +38,7 @@
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <div class="modal-body">
-                                                <p>Se han realizado cambios a la ambulancia</p>
+                                                <p>Se han realizado cambios de la unidad</p>
                                             </div>
                                             <div class="modal-footer">
                                                 <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
@@ -56,7 +56,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <p>Si sales ahora no se guardarán los cambios en la ambulancia</p>
+                        <p>Si sales ahora no se guardarán los cambios de la unidad</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
