--- a/Vostok/inventario/templates/inventario/crear_inventario.html
+++ b/Vostok/inventario/templates/inventario/crear_inventario.html
@@ -17,7 +17,7 @@
             <div class="col-md-12 offset-lg-2">
                 <div class="row">
                     <div class="col mb-6">
-                        <h1>Crear Inventario</h1>
+                        <h1>Crear Equipo</h1>
                             <button class="btn btn-dark" type="button" data-toggle="modal" data-target="#modalCancel"><i
                                     class="fas fa-arrow-left"></i></button>
                         <br><br>
@@ -76,7 +76,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <p>Se ha creado un inventario nuevo</p>
+                            <p>Se ha creado un equipo nuevo</p>
                         </div>
                         <div class="modal-footer">
                             <a href="/inventario/ver/" class="btn btn-success">De acuerdo</a>
@@ -96,7 +96,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <p>Si sales ahora no se guardará el material nuevo</p>
+                        <p>Si sales ahora no se guardará el equipo nuevo</p>
                     </div>
                     <div class="modal-footer">
                         <a href="/inventario/ver/" class="btn btn-danger">Salir sin guardar</a>
