--- a/Vostok/inventario/templates/inventario/editar_inventario.html
+++ b/Vostok/inventario/templates/inventario/editar_inventario.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="col text-center m-3">
-            <h1>Editar inventario {{ inventario.nombre }}</h1>
+            <h1>Editar Equipo {{ inventario.nombre }}</h1>
         </div>
     </div>
     <div class="container-fluid">
@@ -38,7 +38,7 @@
                                     <div class="modal-dialog" role="document">
                                         <div class="modal-content">
                                             <div class="modal-body">
-                                                <p>Se han realizado cambios al inventario</p>
+                                                <p>Se han realizado cambios al equipo</p>
                                             </div>
                                             <div class="modal-footer">
                                                 <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
@@ -56,11 +56,11 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <p>Si sales ahora no se guardarán los cambios en el inventario</p>
+                        <p>Si sales ahora no se guardarán los cambios en el equipo</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
-                        <a href="/ambulancia/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="/inventario/ver/" class="btn btn-danger">Salir sin guardar</a>
                     </div>
                 </div>
             </div>
