--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -7,7 +7,7 @@
 
     {% if user.is_authenticated %}
         <div class="container-fluid">
-            <h1><i class="zmdi zmdi-shape"> </i>Inventarios </h1>
+            <h1><i class="zmdi zmdi-shape"> </i>Equipos </h1>
 
             <div class="row">
                  <div id="datatable_filter" class="col"><label>Buscar:<input
@@ -96,7 +96,7 @@
                 </button>
                 <h4 class="custom-modal-title">Confirmación</h4>
                 <div class="custom-modal-text">
-                    ¿Quieres eliminar el inventario {{ Inventario.nombre }} permanentemente?
+                    ¿Quieres eliminar el equipo {{ Inventario.nombre }} permanentemente?
                     <form action="#" data-parsley-validate="" novalidate="">
                         <div class="form-group text-right mb-0">
                             <button class="btn btn-danger waves-effect waves-light mr-1" type="submit">
