--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-sm">
 
-                    <h1><i class="zmdi zmdi-shape"> </i>Inventario {{ nombre_inventario }} </h1>
+                    <h1><i class="zmdi zmdi-shape"> </i>Equipo {{ nombre_inventario }} </h1>
 
                 </div>
                 {% if user.is_administrador or user.is_adminplus %}
