--- a/Vostok/revision/templates/revision/reportes.html
+++ b/Vostok/revision/templates/revision/reportes.html
@@ -24,14 +24,14 @@
                 </tr>
                 </thead>
                 <tbody>
-
+                {% for  revisionReciente in revisionRecientes %}
                     <tr>
-                        {{ revisionReciente}}
 
-                        <td></td>
+
+                        <td>revisionReciente</td>
 
                     </tr>
-
+                {% endfor %}
                 </tbody>
             </table>
         </div>
