Filtros de fecha en revisiones

--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -1,10 +1,23 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
+<script>
+      $("#id_mes").change(function () {
+      console.log( $(this).val() );
+    });
+</script>
 {% block content %}
     <!--######## VIEW US41 ########-->
 
 
     <h2>Historial de revisiones de inventarios</h2>
+                <div class="col-10">
+
+                <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
+                        type="search" class="form-control form-control-sm" placeholder=""
+                        aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
+
+            </div>
+
 
     {% if  registros %}
         <br>
@@ -18,7 +31,7 @@
         <br>
 
         <div class="table-responsive">
-            <table class="table table-dark mb-0">
+            <table class="table table-dark mb-0" id="Revisiones">
                 <thead>
                 <tr>
 
@@ -27,7 +40,8 @@
 
                 </tr>
                 </thead>
-                <tbody>
+
+            <br>
                 {% for registro in registros %}
                     <tr>
 
@@ -88,5 +102,26 @@
 </div>
     </div>
     <!--######## VIEW US41 ########-->
+    <script>
+        function Filter() {
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("Revisiones");
+            tr = table.getElementsByTagName("tr");
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
+    </script>
+
 
 {% endblock %}
