Fix various defects

--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -20,7 +20,7 @@
             <div align="right" class="col">
                 <a href="{% url "ambulancia:crear" %}" type="button"
                    class="btn btn-bordred-success waves-effect  width-md waves-light"><i class="fas fa-plus"></i>
-                    Agregar Ambulancia</a>
+                    Agregar Unidad</a>
             </div>
             {% endif %}
 
