--- a/Vostok/users/templates/users/ver_usuarios.html
+++ b/Vostok/users/templates/users/ver_usuarios.html
@@ -111,14 +111,14 @@
                     <hr>
                     <h4>Voluntario</h4>
                     <p>
-                        Puede ver los inventarios, materiales y ambulancias.
+                        Puede ver los materiales, equipos y unidades.
                         <br>
-                        Sólo puede ver la información.
+                        Sólo puede ver la información de éstos.
                     <p>
                     <hr>
                     <h4>Administrador</h4>
                     <p>
-                        Puede crear, editar y eliminar información de los materiales, inventarios y ambulancias.
+                        Puede crear, editar y eliminar información de los materiales, equipos y unidades.
                         <br>
                         Tiene los permisos para supervisar los detalles de las revisiones.
                         <br>
