--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row">
         <div class="col text-center m-3">
-            <h1>Editar ambulancia {{ ambulancia.nombre }}</h1>
+            <h1>Editar el material {{ material.nombre }}</h1>
         </div>
     </div>
     <div class="container-fluid">
