--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -4,7 +4,7 @@
     <!--######## VIEW US29 ########-->
 
 
-    <h2>Historial de revisiones del estado de la ambulancia</h2>
+    <h2>Historial de revisiones del estado de Unidad</h2>
        <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
                         type="search" class="form-control form-control-sm" placeholder=""
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
