--- a/Vostok/inventario/templates/inventario/agregar_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/agregar_material_inventario.html
@@ -77,7 +77,7 @@
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <p>Se han agregado {{ cantidad }} unidades de {{ nombre_material }}
+                            <p>Se han agregado {{ nombre_material }}
                                 a {{ nombre_inventario }} </p>
                         </div>
                         <div class="modal-footer">
