--- a/Vostok/inventario/templates/inventario/crear_inventario.html
+++ b/Vostok/inventario/templates/inventario/crear_inventario.html
@@ -44,7 +44,7 @@
                                                 {% endfor %}
                                             {% endif %}
                                             <div class="input-field ">
-                                                <label class="active">Nombre de inventario:</label>
+                                                <label class="active">Nombre de unidad:</label>
                                                 <input class="form-control" name="nombre" maxlength="100" required=""
                                                        id="nombre">
 
