agrreglar activaciones de ambulancias y mostrar nombre de las guardias - reducir número de estados a activa y desactivada - agregar campo de guardia a usuario - agregar tabla de activables. se usa para ver cuántas ambulancias   pueden ser activadasen la app al mismo tiempo - en la view de control de ambulancia se puede editar el número de   ambulancias que pueden ser activadas al mismo tiempo

--- a/Vostok/revision/templates/revision/ver_detalle_revision.html
+++ b/Vostok/revision/templates/revision/ver_detalle_revision.html
@@ -13,7 +13,7 @@
                 <li class="list-group-item">Ambulancia: {{ ambulancia.nombre }}</li>
                 <li class="list-group-item">Responsable: {{ revision.usuario.first_name }} {{ revision.usuario.last_name }}</li>
                 <li class="list-group-item">Email del responsable: {{ revision.usuario.email }}</li>
-                <li class="list-group-item">Guardia: {{ revision.usuario.turno }}</li>
+                <li class="list-group-item">Guardia: {{ revision.usuario.get_turno_display }}</li>
                 <li class="list-group-item">Fecha de revisión: {{ revision.fecha }}</li>
                 <li class="list-group-item">Observaciones: <p>{{ revision.observaciones }}</p></li>
             </ul>
