--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -31,7 +31,7 @@
                     <tr>
                         <td>{{ registro.revision.fecha }}</td>
                         <td>{{ registro.revision.usuario.first_name }} {{ registro.revision.usuario.last_name }}</td>
-                        <th>{{ registro.revision.usuario.turno }}</th>
+                        <th>{{ registro.revision.usuario.get_turno_display }}</th>
                         <td><a href="{{ registro.revision.id }}">
                             <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Ver detalle
                             </button>
