--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -28,7 +28,7 @@
                     <tr>
                         <td>{{ revision.fecha }}</td>
                         <td>{{ revision.usuario.first_name }}{{ revision.usuario.last_name }}</td>
-                        <td>{{ revision.usuario.turno }}</td>
+                        <td>{{ revision.usuario.get_turno_display }}</td>
                         <td><a href="{% url 'revision:detalle_ambulancia' id=ambulancia.id id_revision=revision.id %}">
                             <button class="btn btn-primary btn-rounded width-md waves-effect waves-light">Ver detalle
                             </button>
