--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -19,7 +19,7 @@
                 {% if user.is_administrador or user.is_adminplus %}
                 <a href="{% url 'inventario:crear_inventario' %}">
                     <button type="button" class="btn btn-bordred-success waves-effect  width-md waves-light"><i
-                            class="fas fa-plus"></i> Agregar Inventario
+                            class="fas fa-plus"></i> Agregar Equipo
                     </button>
                 </a>
                 {% endif %}
