--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -38,6 +38,31 @@
                         <td>{{ ambulancia.objetivo_liquido_frenos}}</td>
                         <td>{{ revision.liquido_frenos }}</td>
                     </tr>
+                    <tr>
+                        <td>Aceite de motor</td>
+                        <td>{{ ambulancia.objetivo_aceite_motor }}</td>
+                        <td>{{ revision.aceite_motor }}</td>
+                    </tr>
+                    <tr>
+                        <td>Aceite de dirección</td>
+                        <td>{{ ambulancia.objetivo_aceite_direccion }}</td>
+                        <td>{{ revision.aceite_direccion }}</td>
+                    </tr>
+                    <tr>
+                        <td>Anticongelante</td>
+                        <td>{{ ambulancia.objetivo_anticongelante }}</td>
+                        <td>{{ revision.anticongelante }}</td>
+                    </tr>
+                    <tr>
+                        <td>Kilometraje</td>
+                        <td>{{ ambulancia.objetivo_kilometraje }}</td>
+                        <td>{{ revision.kilometraje }}</td>
+                    </tr>
+                    <tr>
+                        <td>Líquido limpiaparabrisas</td>
+                        <td>{{ ambulancia.objetivo_liquido_limpiaparabrisas }}</td>
+                        <td>{{ revision.liquido_limpiaparabrisas }}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
