arreglar defecto editar material, ambulancia e inventario

--- a/Vostok/material/templates/material/editar_material.html
+++ b/Vostok/material/templates/material/editar_material.html
@@ -2,6 +2,15 @@
 {% extends 'dashboard/base.html' %}
 {% load staticfiles %}
 {% block content %}
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
     <div class="row">
         <div class="col text-center m-3">
             <h1>Editar el material {{ material.nombre }}</h1>
@@ -29,21 +38,7 @@
                                         </button>
                                     </div>
                                     <div class="col-md-2 offset-md-8">
-                                        <button class="btn btn-success waves-effect waves-light" type="button" data-toggle="modal"
-                                                data-target="#modalSaved">Guardar
-                                        </button>
-                                    </div>
-                                </div>
-                                <div class="modal" id="modalSaved" tabindex="-1" role="dialog" data-backdrop="static">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-body">
-                                                <p>Se han realizado cambios al material</p>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
-                                            </div>
-                                        </div>
+                                        <button class="btn btn-success waves-effect waves-light" type="submit">De acuerdo</button>
                                     </div>
                                 </div>
                             </form>
@@ -60,10 +55,30 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Continuar editando</button>
-                        <a href="/material/ver/" class="btn btn-danger">Salir sin guardar</a>
+                        <a href="{%url 'material:ver_material' %}" class="btn btn-danger">Salir sin guardar</a>
                     </div>
                 </div>
             </div>
         </div>
+        {% if estado == "guardado" %}
+            <div class="modal" id="modalSaved" tabindex="-1" role="dialog">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                            <p>Se han guardado los cambios en el material</p>
+                        </div>
+                        <div class="modal-footer">
+                            <a href="{% url 'material:ver_material' %}" class="btn btn-success">De acuerdo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <script>
+                $("#modalSaved").modal({
+                    backdrop: "static",
+                    keyboard: false
+                });
+            </script>
+        {% endif %}
     </div>
 {% endblock %}
