corregir boton control ambulancias

--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -166,18 +166,11 @@
                             <li>
                                 <a href="{% url 'ambulancia:ver_control_ambulancias' %}">
                                     <i class="mdi mdi-clipboard-check-outline"></i>
-                                    <span> Control de Ambulancias </span>
+                                    <span> Control de Unidades </span>
                                 </a>
                             </li>
                             {% endif %}
                             {% if user.is_adminplus %}
-                            <li>
-                                <a href="{% url 'ambulancia:ver_control_ambulancias' %}">
-                                    <i class="mdi mdi-clipboard-check-outline"></i>
-                                    <span> Control de Ambulancias </span>
-                                </a>
-                            </li>
-
                             <li>
                                 <a href="{% url 'users:ver_usuarios' %}">
                                     <i class="mdi mdi-account-multiple-outline"></i>
