cambiar titulo de template control ambulancias a control de unidades

--- a/Vostok/ambulancia/templates/ambulancia/control_ambulancias.html
+++ b/Vostok/ambulancia/templates/ambulancia/control_ambulancias.html
@@ -13,7 +13,7 @@
     <!--######## VIEW US26 ########-->
 
 
-    <h2>Control de ambulancias</h2>
+    <h2>Control de Unidades</h2>
 
     {% if activables %}
         <div class="card-box">
