--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -11,7 +11,7 @@
 
             <div class="row">
                  <div id="datatable_filter" class="col"><label>Buscar:<input
-                            type="search" class="form-control form-control-sm" placeholder=""
+                            type="search" class="form-control form-control-sm" placeholder="Buscar Inventario..."
                             aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             <div class="col" align="right">
