--- a/Vostok/inventario/templates/inventario/ver_material_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_material_inventario.html
@@ -36,7 +36,7 @@
             </a>
              <br><br>
             <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder=""
+                    type="search" class="form-control form-control-sm" placeholder="Buscar Material..."
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
 
