--- a/Vostok/revision/templates/revision/ver_detalle_revision.html
+++ b/Vostok/revision/templates/revision/ver_detalle_revision.html
@@ -33,7 +33,7 @@
 
         <div class="row">
             <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder=""
+                    type="search" class="form-control form-control-sm" placeholder="Buscar Material"
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
         </div>
         <br>
