--- a/Vostok/revision/templates/revision/ver_revisiones.html
+++ b/Vostok/revision/templates/revision/ver_revisiones.html
@@ -18,7 +18,7 @@
                 <div class="col-10">
 
                 <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
-                        type="search" class="form-control form-control-sm" placeholder=""
+                        type="search" class="form-control form-control-sm" placeholder="Buscar Fecha..."
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             </div>
@@ -114,7 +114,7 @@
             table = document.getElementById("Revisiones");
             tr = table.getElementsByTagName("tr");
             for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[1];
+                td = tr[i].getElementsByTagName("td")[0];
                 if (td) {
                     txtValue = td.textContent || td.innerText;
                     if (txtValue.toUpperCase().indexOf(filter) > -1) {
