--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -6,7 +6,7 @@
 
     <h2>Historial de revisiones del estado de Unidad</h2>
        <div id="datatable_filter" class="dataTables_filter"><label>Buscar:<input
-                        type="search" class="form-control form-control-sm" placeholder=""
+                        type="search" class="form-control form-control-sm" placeholder="Buscar Detalle..."
                         aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             </div>
