--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -13,7 +13,7 @@
 
         <div class="row">
             <div id="datatable_filter" class="col"><label>Buscar:<input
-                    type="search" class="form-control form-control-sm" placeholder="Buscar Ambulancia..."
+                    type="search" class="form-control form-control-sm" placeholder="Buscar Unidad..."
                     aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
 
             {% if user.is_administrador or user.is_adminplus %}
