--- a/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_revisiones_ambulancia.html
@@ -63,7 +63,7 @@
                                         ambulancia.
                                         Consultar a administrador </p>
 
-                                    <a href="/index/"><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
+                                    <a href="{% url 'ambulancia:ver_ambulancias' %}"><i class="fas fa-home mr-1"></i> Regresar a ambulancias</a>
                                 </div>
 
 
