--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -217,8 +217,11 @@ Head
         <footer class="footer">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-md-6">
-                        Vostok Dashboard App by <a href="">Impulse</a>
+                    <div class="col-6">
+                        Vostok Dashboard App by <a href="https://impulse-semestrei.github.io/">Impulse</a>
+                    </div>
+                    <div class="col-6">
+                        <a href="{% static "dashboard/images/vostok_dp.pdf" %}">Política de Datos Personales</a>
                     </div>
                 </div>
             </div>
