Cambiar nombre de cantidad en material a cantidad ideal

--- a/Vostok/material/templates/material/ver_material.html
+++ b/Vostok/material/templates/material/ver_material.html
@@ -50,7 +50,7 @@
                     Descripción
                 </th>
                 <th scope="col">
-                    Cantidad
+                    Cantidad Ideal
                 </th>
                 {% if user.is_administrador or user.is_adminplus %}
                 <th scope="col">
