Change login view

--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -220,7 +220,7 @@ Head
                     <div class="col-6">
                         Vostok Dashboard App by <a href="https://impulse-semestrei.github.io/">Impulse</a>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 text-right">
                         <a href="{% static "dashboard/images/vostok_dp.pdf" %}">Política de Datos Personales</a>
                     </div>
                 </div>
