--- a/Vostok/users/templates/users/login.html
+++ b/Vostok/users/templates/users/login.html
@@ -9,7 +9,7 @@
 {% load socialaccount %}
     <head>
         <meta charset="utf-8" />
-        <title>Rescate I. Inicia Sesion</title>
+        <title>Rescate 1. Inicia Sesión</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
         <meta content="Coderthemes" name="author" />
@@ -35,20 +35,18 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-8 col-lg-6 col-xl-5" style="padding-top: 10em;">
-{#                        <div class="text-center">#}
-{#                            <a href="index.html">#}
-{#                                <span><img src="{% static 'users/images/google.png' %}" alt="" height="22"></span>#}
-{#                            </a>#}
-{#                            <p class="text-muted mt-2 mb-4">RESCATE I </p>#}
-{#                        </div>#}
                         <div class="card" style="opacity: .85; background-color: #0b0b0b;">
+                            <div class="card-header text-center align-content-center">
+                                <h1>Vostok Dashboard</h1>
+                                <h3>Sistema para Rescate 1</h3>
+                            </div>
 
                             <div class="card-body p-5" >
 
                                     <div class="form-group mb-0 text-center" >
                                               <a class="btn bg-white text-black-50" href="{% provider_login_url 'google' %}">
                                                    <img width="30px" style="margin-right: 20px;" alt="Google &quot;G&quot; Logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png"/>
-                                                    Iniciar Sesion con Google</a>
+                                                    Iniciar Sesión con Google</a>
 
                                     </div>
 
@@ -56,6 +54,10 @@
                                 </form>
 
                             </div> <!-- end card-body -->
+
+                            <div class="card-footer text-right">
+                                <h5>Made by <a href="https://impulse-semestrei.github.io/">Impulse</a></h5>
+                            </div>
                         </div>
                         <!-- end card -->
 
