--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -78,7 +78,7 @@
                                 </button>
                             </a></td>
                             {% if user.is_administrador or user.is_adminplus %}
-                        <td><a href="#delete-modal-{{ material.id }}" data-animation="blur"
+                        <td><a href="#delete-modal-{{ ambulancia.id }}" data-animation="blur"
                                    data-plugin="custommodal" data-overlaycolor="#36404a">
                                 <button type="button" class="btn btn-danger" data-toggle="modal"
                                         data-target="#modalConfirmacion"><i class="fas fa-trash"></i></button>
@@ -89,7 +89,7 @@
                 {% if user.is_administrador or user.is_adminplus %}
                 {% for ambulancia in Ambulancias %}
                     <!-- US47 -->
-                        <div id="delete-modal-{{ ambulacias.id }}" class="modal-demo">
+                        <div id="delete-modal-{{ ambulancia.id }}" class="modal-demo">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <h4 class="custom-modal-title" id="titulo_inventario">Confirmación</h4>
