--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -5,6 +5,12 @@
 
 
     <h2>Historial de revisiones del estado de la ambulancia</h2>
+      <a href="{% url "revision:revisiones_ambulancia"  id=ambulancia.id %}">
+                <button class="btn btn-dark" type="button" data-toggle="modal"
+                        data-target="#modalCancel"><i
+                        class="fas fa-arrow-left"></i></button>
+            </a>
+    <br>
     {% if  revision %}
 
         <br>
