correciones defect log

--- a/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
+++ b/Vostok/ambulancia/templates/ambulancia/ver_ambulancia.html
@@ -32,7 +32,7 @@
                     <th>Nombre</th>
                     <th>Equipo</th>
                 {% if user.is_administrador or user.is_adminplus %}
-                    <th>Editar</th>
+                    <th>Editar nombre</th>
                 {% endif %}
                 {% if user.is_administrador or user.is_adminplus %}
                     <th>Revisiones</th>
