--- a/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
+++ b/Vostok/revision/templates/revision/ver_detalle_ambulancia.html
@@ -4,7 +4,7 @@
     <!--######## VIEW US30 ########-->
 
 
-    <h2>Historial de revisiones del estado de la ambulancia</h2>
+    <h2>Revisión de la unidad {{ ambulancia.nombre }}</h2>
     {% if  revision %}
 
         <br>
