--- a/Vostok/dashboard/templates/dashboard/base.html
+++ b/Vostok/dashboard/templates/dashboard/base.html
@@ -9,7 +9,7 @@ Head
 ============================-->
 <head>
     <meta charset="utf-8"/>
-    <title>Vostok Dashboard</title>
+    <title>Vostok - Rescate1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="Coderthemes" name="author"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
