--- a/Vostok/inventario/templates/inventario/ver_inventario.html
+++ b/Vostok/inventario/templates/inventario/ver_inventario.html
@@ -40,7 +40,7 @@
                     <th scope="col">Nombre</th>
                     <th scope="col">Ver Detalle</th>
                     {% if user.is_administrador or user.is_adminplus %}
-                    <th scope="col">Editar</th>
+                    <th scope="col">Editar nombre</th>
                     <th scope="col">Eliminar</th>
                     {% endif %}
                 </tr>
