--- a/Vostok/revision/templates/revision/reportes.html
+++ b/Vostok/revision/templates/revision/reportes.html
@@ -13,9 +13,14 @@
         </div>
         <div class="card-box">
         <br>
-
+    <div class="row">
+            <div id="datatable_filter" class="col"><label>Buscar:<input
+                    type="search" class="form-control form-control-sm" placeholder="Buscar Material"
+                    aria-controls="datatable" id="myInput" onkeyup="Filter()"></label></div>
+        </div>
+        <br>
         <div class="table-responsive">
-            <table class="table table-dark mb-0">
+            <table class="table table-dark mb-0" id="Materiales">
                 <thead>
                 <tr>
                     <th>Ambulancia</th>
@@ -33,7 +38,7 @@
                     <tr>
                             <td>{{ambulancia.nombre}}</td>
                             <td>{{ x.material.nombre }}</td>
-                            <td>{{ x.material.cantidad|substract:x.cantidad  }}</td>
+                            <td style="background: #c22301; color: white"}>{{ x.material.cantidad|substract:x.cantidad  }}</td>
                             <td>0<td>
 
                     </tr>
@@ -43,7 +48,7 @@
                             <td>{{ambulancia.nombre                                                                                                                                                                                                                                                                }}</td>
                             <td>{{ x.material.nombre }}</td>
                             <td> 0 </td>
-                            <td>{{ x.cantidad|substract:x.material.cantidad}}<td>
+                            <td style="background: dodgerblue; color: white"}>{{ x.cantidad|substract:x.material.cantidad}}<td>
 
                     </tr>
 
@@ -101,5 +106,25 @@
 </div>
     </div>
     <!--######## VIEW US41 ########-->
+<script>
+        function Filter() {
+            var input, filter, table, tr, td, i, txtValue;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            table = document.getElementById("Materiales");
+            tr = table.getElementsByTagName("tr");
+            for (i = 0; i < tr.length; i++) {
+                td = tr[i].getElementsByTagName("td")[1];
+                if (td) {
+                    txtValue = td.textContent || td.innerText;
+                    if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                        tr[i].style.display = "";
+                    } else {
+                        tr[i].style.display = "none";
+                    }
+                }
+            }
+        }
 
+    </script>
 {% endblock %}
